--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "url": "https://github.com/daveio/npm/issues"
   },
   "dependencies": {
-    "chalk": "^5.4.1",
-    "chalk-animation": "^2.0.3",
-    "gradient-string": "^3.0.0",
-    "ora": "^8.2.0",
+    "chalk": "5.4.1",
+    "chalk-animation": "2.0.3",
+    "gradient-string": "3.0.0",
+    "ora": "8.2.0",
     "update-notifier": "7.3.1"
   },
   "description": "Meta package for Dave Williams",
