--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -2,7 +2,7 @@
 # To learn more about the format of this file, see https://docs.trunk.io/reference/trunk-yaml
 version: 0.1
 cli:
-  version: 1.22.9
+  version: 1.22.10
 # Trunk provides extensibility via plugins. (https://docs.trunk.io/plugins)
 plugins:
   sources:
@@ -17,11 +17,13 @@ runtimes:
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
   enabled:
-    - checkov@3.2.361
+    - osv-scanner@1.9.2
+    - renovate@39.188.3
+    - checkov@3.2.382
     - git-diff-check
     - markdownlint@0.44.0
-    - prettier@3.4.2
-    - trufflehog@3.88.4
+    - prettier@3.5.3
+    - trufflehog@3.88.15
     - yamllint@1.35.1
 actions:
   enabled:
