--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   },
   "description": "Meta package for Dave Williams",
   "engines": {
-    "node": ">=18",
-    "npm": ">=11"
+    "bun": "~1.2.4",
+    "node": "~22.14.0"
   },
   "homepage": "https://github.com/daveio/npm#readme",
   "license": "MIT",
   "main": "./src/index.js",
   "name": "dave.io",
-  "packageManager": "npm@11.1.0",
+  "packageManager": "bun@1.2.4",
   "repository": {
     "type": "git",
     "url": "https://github.com/daveio/npm.git"
