--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -16,10 +16,11 @@ runtimes:
     - python@3.10.8
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
+  disabled:
+    - renovate
   enabled:
     - taplo@0.9.3
     - osv-scanner@1.9.2
-    - renovate@39.188.3
     - checkov@3.2.382
     - git-diff-check
     - markdownlint@0.44.0
