--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
   "go.goroot": "${workspaceFolder}/.vscode/mise-tools/goRoot",
   "go.alternateTools": {
     "go": "${workspaceFolder}/.vscode/mise-tools/go",
-    "dlv": "${workspaceFolder}/.vscode/mise-tools/dlv"
+    "dlv": "${workspaceFolder}/.vscode/mise-tools/dlv",
+    "gopls": "${workspaceFolder}/.vscode/mise-tools/gopls"
   },
   "workbench.colorCustomizations": {}
 }
