--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -1,6 +1,6 @@
 version: 0.1
 cli:
-  version: 1.22.10
+  version: 1.22.11
 plugins:
   sources:
     - id: trunk
@@ -15,14 +15,15 @@ lint:
     - cspell
     - renovate
   enabled:
+    - actionlint@1.7.7
     - taplo@0.9.3
-    - osv-scanner@1.9.2
-    - checkov@3.2.382
+    - osv-scanner@2.0.0
+    - checkov@3.2.392
     - git-diff-check
     - markdownlint@0.44.0
     - prettier@3.5.3
-    - trufflehog@3.88.15
-    - yamllint@1.35.1
+    - trufflehog@3.88.18
+    - yamllint@1.37.0
 actions:
   enabled:
     - trunk-announce
