🔥 remove Bun runtime dependency in favor of Node.js only
The project has been simplified to use Node.js exclusively instead of
supporting both Node.js and Bun runtimes. This change:

1. Removes Bun from .tool-versions and mise.toml configuration files
2. Updates package.json to use pnpm instead of Bun as package manager
3. Removes Bun engine requirement from package.json
4. Updates trunk.yaml with additional linting tools and newer versions
5. Improves code formatting in src/index.js and test/test.js with proper
   indentation and const declarations
6. Bumps package version from 0.0.2 to 0.0.3

The change simplifies the development environment and dependency management
by standardizing on Node.js only.

--- a/package.json
+++ b/package.json
@@ -1,40 +1,39 @@
 {
-  "author": {
-    "email": "dave@dave.io",
-    "name": "Dave Williams",
-    "url": "https://dave.io"
-  },
-  "bin": {
-    "dave.io": "./src/cmd.js"
-  },
-  "bugs": {
-    "url": "https://github.com/daveio/npm/issues"
-  },
-  "dependencies": {
-    "chalk": "5.4.1",
-    "chalk-animation": "2.0.3",
-    "gradient-string": "3.0.0",
-    "ora": "8.2.0",
-    "update-notifier": "7.3.1"
-  },
-  "description": "Meta package for Dave Williams",
-  "engines": {
-    "bun": "~1.2.10",
-    "node": "~23.11.0"
-  },
-  "homepage": "https://github.com/daveio/npm#readme",
-  "license": "MIT",
-  "main": "./src/index.js",
-  "name": "dave.io",
-  "packageManager": "bun@1.2.10",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/daveio/npm.git"
-  },
-  "scripts": {
-    "default": "node src/cmd.js",
-    "test": "node --test"
-  },
-  "type": "module",
-  "version": "0.0.2"
+	"name": "dave.io",
+	"version": "0.0.3",
+	"description": "Meta package for Dave Williams",
+	"homepage": "https://github.com/daveio/npm#readme",
+	"bugs": {
+		"url": "https://github.com/daveio/npm/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/daveio/npm.git"
+	},
+	"license": "MIT",
+	"author": {
+		"name": "Dave Williams",
+		"email": "dave@dave.io",
+		"url": "https://dave.io"
+	},
+	"type": "module",
+	"main": "./src/index.js",
+	"bin": {
+		"dave.io": "./src/cmd.js"
+	},
+	"scripts": {
+		"default": "node src/cmd.js",
+		"test": "node --test"
+	},
+	"dependencies": {
+		"chalk": "5.4.1",
+		"chalk-animation": "2.0.3",
+		"gradient-string": "3.0.0",
+		"ora": "8.2.0",
+		"update-notifier": "7.3.1"
+	},
+	"packageManager": "pnpm@10.9.0+sha512.0486e394640d3c1fb3c9d43d49cf92879ff74f8516959c235308f5a8f62e2e19528a65cdc2a3058f587cde71eba3d5b56327c8c33a97e4c4051ca48a10ca2d5f",
+	"engines": {
+		"node": "~23.11.0"
+	}
 }
