🔧 Add Biome as code formatter and linter
Added Biome configuration files and integrated them with Trunk. The changes include:
- Added Biome configuration in `.trunk/configs/biome.json` with formatting rules
- Created a root `biome.json` that extends the Trunk config
- Added Biome as a dev dependency in package.json
- Created a new `bin.js` entry point that intelligently detects the running
  environment (bun, deno, npm, etc.) and executes the command appropriately
- Disabled sort-package-json in Trunk config as Biome will handle formatting
- Updated VSCode settings to use spaces instead of tabs for consistency

These changes improve code quality and developer experience by providing
consistent formatting across the project with Biome, which is a fast
JavaScript/TypeScript linter and formatter.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "type": "module",
   "main": "./src/index.js",
   "bin": {
-    "dave.io": "./src/cmd.js"
+    "dave.io": "./src/bin.js"
   },
   "scripts": {
     "default": "node src/cmd.js",
@@ -36,5 +36,11 @@
   "engines": {
     "bun": "~1.2.13",
     "node": "~lts"
-  }
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^1.9.4"
+  },
+  "trustedDependencies": [
+    "@biomejs/biome"
+  ]
 }
