--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -19,6 +19,7 @@ actions:
     - trunk-upgrade-available
 lint:
   disabled:
+    - sort-package-json
     - renovate
     - cspell
     - eslint
@@ -45,7 +46,6 @@ lint:
     - semgrep@1.116.0
     - shellcheck@0.10.0
     - shfmt@3.6.0
-    - sort-package-json@3.0.0
     - stylelint@16.18.0
     - svgo@3.3.2
     - taplo@0.9.3
