🏗️ Migrate project from JavaScript to TypeScript
The project has been migrated from JavaScript to TypeScript to improve
type safety and developer experience. Key changes include:

- Added TypeScript configuration with tsconfig.json
- Converted JS files to TS (cmd.js → cmd.ts, added index.ts)
- Removed bin.js which contained runtime detection logic in favor of
  using Bun directly
- Updated package.json to reflect TypeScript usage:
  - Changed main entry point to src/cmd.ts
  - Updated bin path to point to compiled dist/cmd.js
  - Added build scripts (make, clean)
  - Changed test command to use Bun
  - Added TypeScript and Bun type dependencies
- Simplified the command execution flow by removing the complex runtime
  detection logic and standardizing on Bun

--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "url": "https://dave.io"
   },
   "type": "module",
-  "main": "./src/index.js",
+  "main": "./src/cmd.ts",
   "bin": {
-    "dave.io": "./src/bin.js"
+    "dave.io": "./dist/cmd.js"
   },
   "scripts": {
-    "default": "node src/cmd.js",
-    "test": "node --test"
+    "start": "bun src/cmd.ts",
+    "make": "bun run clean && bun build --target node src/* --outdir dist",
+    "clean": "rm -rf dist",
+    "test": "bun test"
   },
   "dependencies": {
+    "@types/bun": "^1.2.13",
     "chalk": "5.4.1",
     "chalk-animation": "2.0.3",
     "gradient-string": "3.0.0",
@@ -38,6 +41,7 @@
     "node": "~lts"
   },
   "devDependencies": {
+    "typescript": "^5.4.0",
     "@biomejs/biome": "^1.9.4"
   },
   "trustedDependencies": [
