--- a/package.json
+++ b/package.json
@@ -44,7 +44,5 @@
     "typescript": "^5.4.0",
     "@biomejs/biome": "^1.9.4"
   },
-  "trustedDependencies": [
-    "@biomejs/biome"
-  ]
+  "trustedDependencies": ["@biomejs/biome"]
 }
