🚀 Add Docker and GitHub Actions support for containerization and CI/CD
Added Docker support with a multi-stage Alpine-based Dockerfile that runs the application securely as a non-root user. Implemented GitHub Actions workflows for CI (linting and testing) and Docker image building with automatic publishing to GitHub Container Registry. Added Dependabot configuration for Docker and GitHub Actions. Removed Node.js version files in favor of Bun-only runtime. Added Cursor IDE rules for better development experience with TypeScript, Docker, GitHub Actions, and Bun.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,19 @@
 version: 2
 updates:
-  # Configuration for npm
+  - package-ecosystem: docker
+    directory: /
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 10
+    assignees:
+      - daveio
+  - package-ecosystem: github-actions
+    directory: /
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 10
+    assignees:
+      - daveio
   - package-ecosystem: npm
     directory: /
     schedule:
