--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,18 +10,16 @@ on:
 
 jobs:
   lint:
-    name: Lint with trunk.io
+    name: lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@85e6279cec87321a52edac9c87bce653a07cf6c2
-      - name: Set up trunk
+      - name: Lint with Trunk
         uses: trunk-io/trunk-action@b8812b3da2f527db878ef7541c4177f8d280cd89
-      - name: Run trunk check
-        run: trunk check --all --fix --ci
 
   test:
-    name: Test with Bun
+    name: test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
