--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -15,23 +15,23 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: checkout
         uses: actions/checkout@85e6279cec87321a52edac9c87bce653a07cf6c2
 
-      - name: Set up QEMU
+      - name: qemu
         uses: docker/setup-qemu-action@737ba1e397ec2caff0d098f75e1136f9a926dc0a
 
-      - name: Set up Docker Buildx
+      - name: buildx
         uses: docker/setup-buildx-action@e600775e527acba2317260cadb64b7e19efd5362
 
-      - name: Log in to GitHub Container Registry
+      - name: login
         uses: docker/login-action@6d4b68b490aef8836e8fb5e50ee7b3bdfa5894f0
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels)
+      - name: metadata
         id: meta
         uses: docker/metadata-action@418e4b98bf2841bd337d0b24fe63cb36dc8afa55
         with:
@@ -40,7 +40,7 @@ jobs:
             type=sha,format=long
             type=raw,value=latest
 
-      - name: Build and push Docker image with provenance
+      - name: build
         uses: docker/build-push-action@0788c444d8b4d67580213712e34a148cae3a6c4e
         with:
           context: .
