👷 Add npm publishing workflow and enhance Docker image tagging
Added a new GitHub workflow for publishing to npm when tags are pushed.
The workflow checks out the code, sets up Bun, installs dependencies,
builds the package, updates the version based on the git tag, and
publishes to npm using the provided token.

Also enhanced the Docker workflow to include reference-based tagging
(type=ref,pattern=*) which will create Docker images tagged with branch
and tag names, making it easier to identify specific versions.

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -36,6 +36,7 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository }}
           tags: |
+            type=ref,pattern=*
             type=sha,format=long
             type=raw,value=latest
 
