--- a/biome.json
+++ b/biome.json
@@ -2,6 +2,6 @@
   "$schema": ".trunk/configs/biome_schema.json",
   "extends": [".trunk/configs/biome.json"],
   "files": {
-    "ignore": [".trunk"]
+    "ignore": [".trunk", ".history", "dist"]
   }
 }
