🔧 (npm.yaml): add Node.js setup to CI workflow and enable npm provenance
The workflow now sets up Node.js 22.x alongside Bun to ensure proper npm publishing capabilities. Added the `--provenance` flag to npm publish command to improve package security by providing supply chain metadata. Also bumped package version from 0.0.5 to 0.0.6 for the upcoming release.

--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -22,6 +22,12 @@ jobs:
         with:
           bun-version: latest
 
+      - name: node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22.x
+          registry-url: https://registry.npmjs.org
+
       - name: dependencies
         run: bun install
 
@@ -36,4 +42,4 @@ jobs:
       - name: push
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: bun x npm publish --access public
+        run: bun x npm publish --provenance --access public
