--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -36,7 +36,7 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository }}
           tags: |
-            type=ref,pattern=*
+            type=ref,event=tag,pattern=*
             type=sha,format=long
             type=raw,value=latest
 
