🚀 Add GitHub Packages Registry publishing alongside NPM
Added support for publishing packages to both NPM and GitHub Packages Registry. The workflow now has the necessary permissions to write packages, configures the GitHub registry with proper scope, and uses the GITHUB_TOKEN for authentication. This dual-publishing approach ensures the package is available in both ecosystems, increasing availability and redundancy. Version bumped to 0.0.8 in package.json.

--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -8,6 +8,7 @@ on:
 permissions:
   contents: read
   id-token: write
+  packages: write
 
 jobs:
   publish:
@@ -39,7 +40,17 @@ jobs:
           TAG_VERSION=${GITHUB_REF##*/}
           bun x json -I -f package.json -e "this.version='${TAG_VERSION}'"
 
-      - name: push
+      - name: publish-npm
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: bun x npm publish --provenance --access public
+
+      - name: setup-ghpr
+        run: |
+          npm config set registry https://npm.pkg.github.com
+          npm config set scope @${{ github.repository_owner }}
+
+      - name: publish-ghpr
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: bun x npm publish --provenance --access public
