--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -16,15 +16,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@85e6279cec87321a52edac9c87bce653a07cf6c2
 
       - name: bun
-        uses: oven-sh/setup-bun@v1
+        uses: oven-sh/setup-bun@735343b667d3e6f658f44d0eca948eb6282f2b76
         with:
           bun-version: latest
 
       - name: node
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020
         with:
           node-version: 22.x
           registry-url: https://registry.npmjs.org
@@ -43,14 +43,9 @@ jobs:
       - name: publish-npm
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: bun x npm publish --provenance --access public
-
-      - name: setup-ghpr
-        run: |
-          npm config set registry https://npm.pkg.github.com
-          npm config set scope @${{ github.repository_owner }}
+        run: bun xnpm publish --provenance --access public
 
       - name: publish-ghpr
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: bun x npm publish --provenance --access public
+        run: bun x npm publish --provenance --access public --scope @daveio --registry https://npm.pkg.github.com
