🔧 ci: improve GitHub Package Registry publishing workflow
Updated the npm.yaml workflow to properly configure the GitHub Package
Registry before publishing. Added a configuration step that sets the
registry URL and temporarily modifies the package name for GHPR
publishing. Also bumped package version from 0.0.11 to 0.0.12. This
change simplifies the publish command by moving registry configuration
to a separate step, making the workflow more maintainable.

--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -45,7 +45,12 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: bun x npm publish --provenance --access public
 
+      - name: configure-ghpr
+        run: |
+          bun x npm config set @daveio:registry=https://npm.pkg.github.com
+          bun x json -I -f package.name -e "@daveio/npm"
+
       - name: publish-ghpr
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: bun x npm publish --provenance --access public --scope @daveio --registry https://npm.pkg.github.com
+        run: bun x npm publish --provenance --access public --scope @daveio
