🐛 Fix GitHub package registry publishing command in CI workflow
Fixed a typo in the GitHub Actions workflow where the package name was being
set incorrectly. Changed from `package.name` to `package.json` and updated
the command to properly set the package name using `this.name`. Also bumped
the package version from 0.0.12 to 0.0.13 for the next release.

--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -48,7 +48,7 @@ jobs:
       - name: configure-ghpr
         run: |
           bun x npm config set @daveio:registry=https://npm.pkg.github.com
-          bun x json -I -f package.name -e "@daveio/npm"
+          bun x json -I -f package.json -e "this.name='@daveio/npm'"
 
       - name: publish-ghpr
         env:
