🔖 bump version to 0.0.14 and improve GitHub package registry auth
The GitHub workflow for npm publishing has been improved by creating a
proper .npmrc file instead of using npm config commands. This approach
is more reliable and explicit. Authentication is now handled directly in
the .npmrc file rather than through environment variables, which
simplifies the publishing process. The package version has been bumped
from 0.0.13 to 0.0.14 for the new release.

--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -47,10 +47,9 @@ jobs:
 
       - name: configure-ghpr
         run: |
-          bun x npm config set @daveio:registry=https://npm.pkg.github.com
+          echo "@daveio:registry=https://npm.pkg.github.com" > .npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> .npmrc
           bun x json -I -f package.json -e "this.name='@daveio/npm'"
 
       - name: publish-ghpr
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: bun x npm publish --provenance --access public --scope @daveio
