🚚 (docker.yaml): rename job from build-and-push to push for clarity
🔖 (package.json): bump version from 0.0.15 to 0.0.16

🎨 (multiple files): improve formatting with consistent quotes and array indentation

The job name in the GitHub workflow was simplified to better reflect its purpose. Version bump prepares for a new release. Formatting changes improve code consistency by using double quotes for wildcards and properly indenting array elements in the trustedDependencies section.

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -3,7 +3,7 @@ name: docker
 on:
   push:
     tags:
-      - '*'
+      - "*"
 
 permissions:
   contents: read
@@ -11,7 +11,7 @@ permissions:
   id-token: write
 
 jobs:
-  build-and-push:
+  push:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
