--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,54 @@
+# Dependencies
 node_modules
+.pnp
+.pnp.js
+
+# Build outputs
 dist
+build
+out
+
+# Version control
 .git
-tests
+.gitignore
+.github
+
+# Environment
 .env
-Dockerfile
-README.md
+.env.*
+
+# IDE and editor files
+.idea
+.vscode
+*.sublime-*
+*.swp
+*~
+
+# Testing
+tests
+coverage
+.nyc_output
+**/*.test.*
+**/*.spec.*
+
+# Logs and debugging
 **/*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+debug.log
+
+# Docker specific
+Dockerfile
+docker-compose*
+.dockerignore
+
+# Documentation
+README.md
+*.md
+docs
+
+# Misc
+.DS_Store
+.history
+.trunk
