🚚 (npm.yaml): rename build command from 'make' to 'build' 🔖 (package.json): bump version from 1.0.0 to 1.0.1
The build command in the GitHub workflow has been updated to match the actual script name in package.json, ensuring CI builds will execute correctly. Version bump indicates a patch release with minor changes or bug fixes.

--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -33,7 +33,7 @@ jobs:
         run: bun install
 
       - name: package
-        run: bun run make
+        run: bun run build
 
       - name: version
         run: |
