📝 docs: add development section and demo GIF to README 🍱 assets: add npm.gif demo animation ✨ feat: add VHS tape script for creating demo GIF 🔧 config: add gif generation script to package.json
Enhanced documentation with a visual demo of the application in action.
Added a "Just show me the output" section with a GIF animation to quickly
demonstrate the tool's functionality. Created a VHS tape script to
generate the demo GIF and added a corresponding npm script to make it
easy for contributors to update the demo when needed.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "prepublishOnly": "bun run lint:fix && bun run test && bun run build",
     "docker:build": "docker build -t dave-io:latest -f Dockerfile .",
     "docker:run": "docker run -it --rm dave-io:latest",
-    "docker": "bun run docker:build && bun run docker:run"
+    "docker": "bun run docker:build && bun run docker:run",
+    "gif": "cd .. && vhs npm/npm.tape"
   },
   "dependencies": {
     "chalk": "5.4.1",
