--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,10 @@ updates:
     open-pull-requests-limit: 100
     assignees:
       - daveio
+    groups:
+      all-dependencies:
+        patterns:
+          - "*"
   - package-ecosystem: github-actions
     directory: /
     schedule:
@@ -14,6 +18,10 @@ updates:
     open-pull-requests-limit: 100
     assignees:
       - daveio
+    groups:
+      all-dependencies:
+        patterns:
+          - "*"
   - package-ecosystem: npm
     directory: /
     schedule:
@@ -21,6 +29,10 @@ updates:
     open-pull-requests-limit: 100
     assignees:
       - daveio
+    groups:
+      all-dependencies:
+        patterns:
+          - "*"
   - package-ecosystem: bun
     directory: /
     schedule:
@@ -28,3 +40,7 @@ updates:
     open-pull-requests-limit: 100
     assignees:
       - daveio
+    groups:
+      all-dependencies:
+        patterns:
+          - "*"
