🔧 Update Biome and Trunk configuration with enhanced linting rules
⬆️ Upgrade Trunk CLI from v1.22.15 to v1.24.0 and update dependencies
🔧 Add comprehensive style linting rules to Biome configuration
🎨 Improve code formatting by breaking long lines in index.ts
♻️ Refactor file ignore patterns to use includes instead of ignore

Enhanced linting configuration with stricter style rules to improve code
quality and consistency. Updated Trunk tooling versions for better
performance and bug fixes. Reformatted long parameter lists for better
readability and maintainability.

--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "build": "bun run clean && bun build --target node --minify --sourcemap ./src/index.ts ./src/cmd.ts --outdir dist",
     "clean": "rm -rf dist",
     "test": "bun test",
-    "lint": "bunx @biomejs/biome check .",
-    "lint:fix": "bunx @biomejs/biome check --apply .",
+    "lint": "bun x @biomejs/biome check .",
+    "lint:fix": "bun x @biomejs/biome check --write .",
     "prepublishOnly": "bun run lint:fix && bun run test && bun run build",
     "docker:build": "docker build -t dave-io:latest -f Dockerfile .",
     "docker:run": "docker run -it --rm dave-io:latest",
