--- a/biome.json
+++ b/biome.json
@@ -2,6 +2,22 @@
   "$schema": ".trunk/configs/biome_schema.json",
   "extends": [".trunk/configs/biome.json"],
   "files": {
-    "ignore": [".trunk", ".history", "dist"]
+    "includes": ["**", "!**/.trunk", "!**/.history", "!**/dist"]
+  },
+  "linter": {
+    "rules": {
+      "style": {
+        "noParameterAssign": "error",
+        "useAsConstAssertion": "error",
+        "useDefaultParameterLast": "error",
+        "useEnumInitializers": "error",
+        "useSelfClosingElements": "error",
+        "useSingleVarDeclarator": "error",
+        "noUnusedTemplateLiteral": "error",
+        "useNumberNamespace": "error",
+        "noInferrableTypes": "error",
+        "noUselessElse": "error"
+      }
+    }
   }
 }
