--- a/package.json
+++ b/package.json
@@ -1,41 +1,14 @@
 {
-  "name": "dave.io",
-  "version": "1.0.6",
-  "description": "Meta package for Dave Williams",
-  "homepage": "https://github.com/daveio/npm#readme",
-  "bugs": {
-    "url": "https://github.com/daveio/npm/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/daveio/npm.git"
-  },
-  "license": "MIT",
   "author": {
-    "name": "Dave Williams",
     "email": "dave@dave.io",
+    "name": "Dave Williams",
     "url": "https://dave.io"
   },
-  "type": "module",
-  "main": "./dist/cmd.js",
   "bin": {
     "dave.io": "./dist/cmd.js"
   },
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "start": "bun src/cmd.ts",
-    "build": "bun run clean && bun build --target node --minify --sourcemap ./src/index.ts ./src/cmd.ts --outdir dist",
-    "clean": "rm -rf dist",
-    "test": "bun test",
-    "lint": "bun x @biomejs/biome check .",
-    "lint:fix": "bun x @biomejs/biome check --write .",
-    "prepublishOnly": "bun run lint:fix && bun run test && bun run build",
-    "docker:build": "docker build -t dave-io:latest -f Dockerfile .",
-    "docker:run": "docker run -it --rm dave-io:latest",
-    "docker": "bun run docker:build && bun run docker:run",
-    "tape": "vhs npm.tape && gif2webp -mixed -sharp_yuv -m 6 -min_size -mt -v assets/npm.gif -o assets/npm.webp && rm assets/npm.gif"
+  "bugs": {
+    "url": "https://github.com/daveio/npm/issues"
   },
   "dependencies": {
     "chalk": "^5.4.1",
@@ -45,16 +18,43 @@
     "ora": "^8.2.0",
     "update-notifier": "^7.3.1"
   },
-  "packageManager": "bun@1.2.19",
-  "engines": {
-    "bun": "~1.2.19"
-  },
+  "description": "Meta package for Dave Williams",
   "devDependencies": {
-    "@biomejs/biome": "^2.1.2",
+    "@biomejs/biome": "^2.1.3",
     "@types/bun": "^1.2.19",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.2"
+  },
+  "engines": {
+    "bun": "^1.2.19"
+  },
+  "files": [
+    "dist"
+  ],
+  "homepage": "https://github.com/daveio/npm#readme",
+  "license": "MIT",
+  "main": "./dist/cmd.js",
+  "name": "dave.io",
+  "packageManager": "bun@1.2.19",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/daveio/npm.git"
+  },
+  "scripts": {
+    "build": "bun run clean && bun build --target node --minify --sourcemap ./src/index.ts ./src/cmd.ts --outdir dist",
+    "clean": "rm -rf dist",
+    "docker": "bun run docker:build && bun run docker:run",
+    "docker:build": "docker build -t dave-io:latest -f Dockerfile .",
+    "docker:run": "docker run -it --rm dave-io:latest",
+    "lint": "bun x @biomejs/biome check .",
+    "lint:fix": "bun x @biomejs/biome check --write .",
+    "prepublishOnly": "bun run lint:fix && bun run test && bun run build",
+    "start": "bun src/cmd.ts",
+    "tape": "vhs npm.tape && gif2webp -mixed -sharp_yuv -m 6 -min_size -mt -v assets/npm.gif -o assets/npm.webp && rm assets/npm.gif",
+    "test": "bun test"
   },
   "trustedDependencies": [
     "@biomejs/biome"
-  ]
+  ],
+  "type": "module",
+  "version": "1.0.6"
 }
