🐛 Fix Docker CMD to use compiled JavaScript instead of TypeScript
The Dockerfile now correctly runs the compiled JavaScript file from the
dist directory instead of trying to execute TypeScript source files
directly. This ensures the container uses the built artifacts and
matches the healthcheck configuration. Also fixes the CommonJS import
example in README and corrects the main entry point in package.json
to point to index.js instead of cmd.js, while updating test imports
to use TypeScript extensions for consistency.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "https://dave.io"
   },
   "type": "module",
-  "main": "./dist/cmd.js",
+  "main": "./dist/index.js",
   "bin": {
     "dave.io": "./dist/cmd.js"
   },
