--- a/package.json
+++ b/package.json
@@ -42,16 +42,16 @@
     "chalk-animation": "^2.0.3",
     "cli-table3": "^0.6.5",
     "gradient-string": "^3.0.0",
-    "ora": "^9.0.0",
+    "ora": "^9.1.0",
     "update-notifier": "^7.3.1"
   },
-  "packageManager": "bun@1.3.3",
+  "packageManager": "bun@1.3.7",
   "engines": {
-    "bun": "~1.3.3"
+    "bun": "^1.3.7"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.7",
-    "@types/bun": "^1.3.3",
+    "@biomejs/biome": "^2.3.13",
+    "@types/bun": "^1.3.7",
     "typescript": "^5.9.3"
   },
   "trustedDependencies": [
