--- a/mise.toml
+++ b/mise.toml
@@ -5,7 +5,6 @@ DAVE_NPM_MISE_ACTIVE = 'true'
 env_file = '.env'
 
 [tools]
-bun = { version = '1.3.7' }
-claude = { version = '2.1.22' }
-codex = { version = '0.92.0' }
-gemini = { version = '0.26.0' }
+bun = { version = '1.3.8' }
+
+# [tasks]
